# cpp-docker-dev

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
.devcontainer/: devcontainer.json
src/: main.cpp
src/basics/hello_world/: CMakeLists.txt  hello_world.cpp
src/basics/user_input/: CMakeLists.txt  user_input.cpp
